# soothsayer

./: .dockerignore  .env.sample  .gitignore  README.md  docker-compose.yml  gradio_ui.py  gradio_ui_auto.py  pyproject.toml  setup_ephemeris.py  setup_init.py  setup_update.py  ui_auto.py  ui_manual.py
.github/workflows/: test.yml
alembic/: env.py
alembic/versions/: 33fa13a73075_set_nullable_false_to_all_tables.py  704b8f937652_init.py
app/: config.py  config_sample.py  gradio_ui.py  manualy_setup_db.py
app/application/: audio.py  audio_auto_player.py  filter_yt_comment.py  generate_audio.py  generate_result.py  obs_display_service.py  store_livechat.py  text_service.py  thread_manager.py  westernastrology.py
app/application/prompts/: western_astrology.sample.md
app/core/: const.py  logging_config.py  utils.py
app/core/location_data/: city.csv  prefecture.csv
app/domain/: repositories.py  westernastrology.py
app/domain/youtube/: live.py
app/infrastructure/: db_common.py  kvstore.py  kvstore_impl.py  repositoriesImpl.py  tables.py
app/interfaces/gradio_app/: constract_html.py  thread_manager.py
app/interfaces/obs/: ui.py  utils.py
app/interfaces/obs/dtos/: sceneitem.py
app/interfaces/obs/texts/: comment.txt  username.txt
docs/: app_usage.md
grafana_conf/dashboard-settings/: default.yml
grafana_conf/dashboards/: dashboard.json
grafana_conf/datasources/: default.yml
tests/application/: test_text_service.py
tools/: swiss_ephemeris_sample.py
